syntax = "proto3";

package personalword;

import "google/protobuf/timestamp.proto";

// ------------------------------------------------- Common

message Category {
    string id = 1;
    string name = 2;
    string user_id = 3;
    string color = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message Word {
    string id = 1;
    string word = 2;
    repeated string user_ids = 3;
    repeated string category_names = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message List {
    string id = 1;
    string name = 2;
    repeated string words = 3;
    string user_id = 4;
}
